exports[`no-misrefactored-assignment > invalid(1): a += a + b; 1`] = `

  1 | a += a + b;

`;

exports[`no-misrefactored-assignment > invalid(1): a += a + b; 2`] = `

Message:
> 1 | a += a + b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b;

`;

exports[`no-misrefactored-assignment > invalid(10): a <<= a << b; 1`] = `

  1 | a <<= a << b;

`;

exports[`no-misrefactored-assignment > invalid(10): a <<= a << b; 2`] = `

Message:
> 1 | a <<= a << b;
    | ^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a <<= b;

`;

exports[`no-misrefactored-assignment > invalid(11): a >>= a >> b; 1`] = `

  1 | a >>= a >> b;

`;

exports[`no-misrefactored-assignment > invalid(11): a >>= a >> b; 2`] = `

Message:
> 1 | a >>= a >> b;
    | ^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a >>= b;

`;

exports[`no-misrefactored-assignment > invalid(12): a >>>= a >>> b; 1`] = `

  1 | a >>>= a >>> b;

`;

exports[`no-misrefactored-assignment > invalid(12): a >>>= a >>> b; 2`] = `

Message:
> 1 | a >>>= a >>> b;
    | ^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a >>>= b;

`;

exports[`no-misrefactored-assignment > invalid(13): a += b + a; 1`] = `

  1 | a += b + a;

`;

exports[`no-misrefactored-assignment > invalid(13): a += b + a; 2`] = `

Message:
> 1 | a += b + a;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b;

`;

exports[`no-misrefactored-assignment > invalid(14): a *= b * a; 1`] = `

  1 | a *= b * a;

`;

exports[`no-misrefactored-assignment > invalid(14): a *= b * a; 2`] = `

Message:
> 1 | a *= b * a;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a *= b;

`;

exports[`no-misrefactored-assignment > invalid(15): a &= b & a; 1`] = `

  1 | a &= b & a;

`;

exports[`no-misrefactored-assignment > invalid(15): a &= b & a; 2`] = `

Message:
> 1 | a &= b & a;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a &= b;

`;

exports[`no-misrefactored-assignment > invalid(16): a |= b | a; 1`] = `

  1 | a |= b | a;

`;

exports[`no-misrefactored-assignment > invalid(16): a |= b | a; 2`] = `

Message:
> 1 | a |= b | a;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a |= b;

`;

exports[`no-misrefactored-assignment > invalid(17): a ^= b ^ a; 1`] = `

  1 | a ^= b ^ a;

`;

exports[`no-misrefactored-assignment > invalid(17): a ^= b ^ a; 2`] = `

Message:
> 1 | a ^= b ^ a;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a ^= b;

`;

exports[`no-misrefactored-assignment > invalid(18): foo.bar += foo.bar + 1; 1`] = `

  1 | foo.bar += foo.bar + 1;

`;

exports[`no-misrefactored-assignment > invalid(18): foo.bar += foo.bar + 1; 2`] = `

Message:
> 1 | foo.bar += foo.bar + 1;
    | ^^^^^^^^^^^^^^^^^^^^^^ \`foo.bar\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`foo.bar\`.:
  1 | foo.bar += 1;

`;

exports[`no-misrefactored-assignment > invalid(19): this.x += this.x + y; 1`] = `

  1 | this.x += this.x + y;

`;

exports[`no-misrefactored-assignment > invalid(19): this.x += this.x + y; 2`] = `

Message:
> 1 | this.x += this.x + y;
    | ^^^^^^^^^^^^^^^^^^^^ \`this.x\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`this.x\`.:
  1 | this.x += y;

`;

exports[`no-misrefactored-assignment > invalid(2): a -= a - b; 1`] = `

  1 | a -= a - b;

`;

exports[`no-misrefactored-assignment > invalid(2): a -= a - b; 2`] = `

Message:
> 1 | a -= a - b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a -= b;

`;

exports[`no-misrefactored-assignment > invalid(20): a.b[c] += a.b[c] + d; 1`] = `

  1 | a.b[c] += a.b[c] + d;

`;

exports[`no-misrefactored-assignment > invalid(20): a.b[c] += a.b[c] + d; 2`] = `

Message:
> 1 | a.b[c] += a.b[c] + d;
    | ^^^^^^^^^^^^^^^^^^^^ \`a.b[c]\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a.b[c]\`.:
  1 | a.b[c] += d;

`;

exports[`no-misrefactored-assignment > invalid(21): a.x += a[\"x\"] + b; 1`] = `

  1 | a.x += a["x"] + b;

`;

exports[`no-misrefactored-assignment > invalid(21): a.x += a[\"x\"] + b; 2`] = `

Message:
> 1 | a.x += a["x"] + b;
    | ^^^^^^^^^^^^^^^^^ \`a.x\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a.x\`.:
  1 | a.x += b;

`;

exports[`no-misrefactored-assignment > invalid(22): class A { #x = 0; m() { this.#x += this.#x + b; } } 1`] = `

  1 | class A { #x = 0; m() { this.#x += this.#x + b; } }

`;

exports[`no-misrefactored-assignment > invalid(22): class A { #x = 0; m() { this.#x += this.#x + b; } } 2`] = `

Message:
> 1 | class A { #x = 0; m() { this.#x += this.#x + b; } }
    |                         ^^^^^^^^^^^^^^^^^^^^^^ \`this.#x\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`this.#x\`.:
  1 | class A { #x = 0; m() { this.#x += b; } }

`;

exports[`no-misrefactored-assignment > invalid(23): a += (a) + b; 1`] = `

  1 | a += (a) + b;

`;

exports[`no-misrefactored-assignment > invalid(23): a += (a) + b; 2`] = `

Message:
> 1 | a += (a) + b;
    | ^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b;

`;

exports[`no-misrefactored-assignment > invalid(24): s += s + \"!\"; 1`] = `

  1 | s += s + "!";

`;

exports[`no-misrefactored-assignment > invalid(24): s += s + \"!\"; 2`] = `

Message:
> 1 | s += s + "!";
    | ^^^^^^^^^^^^ \`s\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`s\`.:
  1 | s += "!";

`;

exports[`no-misrefactored-assignment > invalid(25): a += a + a; 1`] = `

  1 | a += a + a;

`;

exports[`no-misrefactored-assignment > invalid(25): a += a + a; 2`] = `

Message:
> 1 | a += a + a;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += a;

`;

exports[`no-misrefactored-assignment > invalid(26): a += a + (b += b + c); 1`] = `

  1 | a += a + (b += b + c);

`;

exports[`no-misrefactored-assignment > invalid(26): a += a + (b += b + c); 2`] = `

Message:
> 1 | a += a + (b += b + c);
    | ^^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += (b += b + c);

`;

exports[`no-misrefactored-assignment > invalid(26): a += a + (b += b + c); 3`] = `

Message:
> 1 | a += a + (b += b + c);
    |           ^^^^^^^^^^ \`b\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`b\`.:
  1 | a += a + (b += c);

`;

exports[`no-misrefactored-assignment > invalid(27): a += a + /* keep */ b; 1`] = `

  1 | a += a + /* keep */ b;

`;

exports[`no-misrefactored-assignment > invalid(27): a += a + /* keep */ b; 2`] = `

Message:
> 1 | a += a + /* keep */ b;
    | ^^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

`;

exports[`no-misrefactored-assignment > invalid(28): a += /* lead */ a + b; 1`] = `

  1 | a += /* lead */ a + b;

`;

exports[`no-misrefactored-assignment > invalid(28): a += /* lead */ a + b; 2`] = `

Message:
> 1 | a += /* lead */ a + b;
    | ^^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += /* lead */ b;

`;

exports[`no-misrefactored-assignment > invalid(29): a += a + (b + c); 1`] = `

  1 | a += a + (b + c);

`;

exports[`no-misrefactored-assignment > invalid(29): a += a + (b + c); 2`] = `

Message:
> 1 | a += a + (b + c);
    | ^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b + c;

`;

exports[`no-misrefactored-assignment > invalid(3): a *= a * b; 1`] = `

  1 | a *= a * b;

`;

exports[`no-misrefactored-assignment > invalid(3): a *= a * b; 2`] = `

Message:
> 1 | a *= a * b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a *= b;

`;

exports[`no-misrefactored-assignment > invalid(30): a += (a + b); 1`] = `

  1 | a += (a + b);

`;

exports[`no-misrefactored-assignment > invalid(30): a += (a + b); 2`] = `

Message:
> 1 | a += (a + b);
    | ^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += (b);

`;

exports[`no-misrefactored-assignment > invalid(31): a += (a as number) + b; 1`] = `

  1 | a += (a as number) + b;

`;

exports[`no-misrefactored-assignment > invalid(31): a += (a as number) + b; 2`] = `

Message:
> 1 | a += (a as number) + b;
    | ^^^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b;

`;

exports[`no-misrefactored-assignment > invalid(32): a += a! + b; 1`] = `

  1 | a += a! + b;

`;

exports[`no-misrefactored-assignment > invalid(32): a += a! + b; 2`] = `

Message:
> 1 | a += a! + b;
    | ^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b;

`;

exports[`no-misrefactored-assignment > invalid(33): a += (<number>a) + b; 1`] = `

  1 | a += (<number>a) + b;

`;

exports[`no-misrefactored-assignment > invalid(33): a += (<number>a) + b; 2`] = `

Message:
> 1 | a += (<number>a) + b;
    | ^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += b;

`;

exports[`no-misrefactored-assignment > invalid(34): a += a + (b, c); 1`] = `

  1 | a += a + (b, c);

`;

exports[`no-misrefactored-assignment > invalid(34): a += a + (b, c); 2`] = `

Message:
> 1 | a += a + (b, c);
    | ^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += (b, c);

`;

exports[`no-misrefactored-assignment > invalid(35): a += a + (b ? c : d); 1`] = `

  1 | a += a + (b ? c : d);

`;

exports[`no-misrefactored-assignment > invalid(35): a += a + (b ? c : d); 2`] = `

Message:
> 1 | a += a + (b ? c : d);
    | ^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += (b ? c : d);

`;

exports[`no-misrefactored-assignment > invalid(36): a += (b ? c : d) + a; 1`] = `

  1 | a += (b ? c : d) + a;

`;

exports[`no-misrefactored-assignment > invalid(36): a += (b ? c : d) + a; 2`] = `

Message:
> 1 | a += (b ? c : d) + a;
    | ^^^^^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a += (b ? c : d);

`;

exports[`no-misrefactored-assignment > invalid(37): a *= a * (b + c); 1`] = `

  1 | a *= a * (b + c);

`;

exports[`no-misrefactored-assignment > invalid(37): a *= a * (b + c); 2`] = `

Message:
> 1 | a *= a * (b + c);
    | ^^^^^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a *= b + c;

`;

exports[`no-misrefactored-assignment > invalid(4): a /= a / b; 1`] = `

  1 | a /= a / b;

`;

exports[`no-misrefactored-assignment > invalid(4): a /= a / b; 2`] = `

Message:
> 1 | a /= a / b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a /= b;

`;

exports[`no-misrefactored-assignment > invalid(5): a %= a % b; 1`] = `

  1 | a %= a % b;

`;

exports[`no-misrefactored-assignment > invalid(5): a %= a % b; 2`] = `

Message:
> 1 | a %= a % b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a %= b;

`;

exports[`no-misrefactored-assignment > invalid(6): a **= a ** b; 1`] = `

  1 | a **= a ** b;

`;

exports[`no-misrefactored-assignment > invalid(6): a **= a ** b; 2`] = `

Message:
> 1 | a **= a ** b;
    | ^^^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a **= b;

`;

exports[`no-misrefactored-assignment > invalid(7): a &= a & b; 1`] = `

  1 | a &= a & b;

`;

exports[`no-misrefactored-assignment > invalid(7): a &= a & b; 2`] = `

Message:
> 1 | a &= a & b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a &= b;

`;

exports[`no-misrefactored-assignment > invalid(8): a |= a | b; 1`] = `

  1 | a |= a | b;

`;

exports[`no-misrefactored-assignment > invalid(8): a |= a | b; 2`] = `

Message:
> 1 | a |= a | b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a |= b;

`;

exports[`no-misrefactored-assignment > invalid(9): a ^= a ^ b; 1`] = `

  1 | a ^= a ^ b;

`;

exports[`no-misrefactored-assignment > invalid(9): a ^= a ^ b; 2`] = `

Message:
> 1 | a ^= a ^ b;
    | ^^^^^^^^^^ \`a\` is duplicated in the right-hand side, which is likely a refactoring mistake.

Suggestion 1/1: Remove the duplicated \`a\`.:
  1 | a ^= b;

`;
